[tool.poetry]
name = "intervaltree"
version = "4.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~2.7 || ^3.4"
sortedcontainers = "^2.0"
pytest = "^4.0"
pytest-pycharm = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
