[tool.poetry]
name = "intervaltree"
version = "4.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.5"
sortedcontainers = "^2.0"


[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-pycharm = "^0.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
